set(CMAKE_CURRENT_SOURCE_DIR ${NVTT_SOURCE_DIR}/src)

CHECK_INCLUDE_FILES(unistd.h HAVE_UNISTD_H)
CHECK_INCLUDE_FILES(stdarg.h HAVE_STDARG_H)
CHECK_INCLUDE_FILES(signal.h HAVE_SIGNAL_H)
CHECK_INCLUDE_FILES(execinfo.h HAVE_EXECINFO_H)
CHECK_INCLUDE_FILES(malloc.h HAVE_MALLOC_H)

include_directories(
    ${CMAKE_CURRENT_BINARY_DIR}
    ${NVTT_SOURCE_DIR}/src/nvcore/poshlib
    ${NVTT_SOURCE_DIR}/src/nvcore
    ${NVTT_SOURCE_DIR}/src/nvmath
    ${NVTT_SOURCE_DIR}/src/nvimage
    ${NVTT_SOURCE_DIR}/src/nvtt/squish
    ${NVTT_SOURCE_DIR}/src/nvtt
    ${NVTT_SOURCE_DIR}/src
)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/nvconfig.h.in ${CMAKE_CURRENT_BINARY_DIR}/nvconfig.h)

set(CMAKE_CURRENT_SOURCE_DIR ${NVTT_SOURCE_DIR}/src/nvcore/poshlib)
set(POSHLIB_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/posh.c
    ${CMAKE_CURRENT_SOURCE_DIR}/posh.h
)

set(CMAKE_CURRENT_SOURCE_DIR ${NVTT_SOURCE_DIR}/src/nvcore)
set(CORE_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/nvcore.h
	${CMAKE_CURRENT_SOURCE_DIR}/Ptr.h
	${CMAKE_CURRENT_SOURCE_DIR}/BitArray.h
	${CMAKE_CURRENT_SOURCE_DIR}/Memory.h
	${CMAKE_CURRENT_SOURCE_DIR}/Memory.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Debug.h
	${CMAKE_CURRENT_SOURCE_DIR}/Debug.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Containers.h
	${CMAKE_CURRENT_SOURCE_DIR}/StrLib.h
	${CMAKE_CURRENT_SOURCE_DIR}/StrLib.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Stream.h
	${CMAKE_CURRENT_SOURCE_DIR}/StdStream.h
	${CMAKE_CURRENT_SOURCE_DIR}/TextReader.h
	${CMAKE_CURRENT_SOURCE_DIR}/TextReader.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/TextWriter.h
	${CMAKE_CURRENT_SOURCE_DIR}/TextWriter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Radix.h
	${CMAKE_CURRENT_SOURCE_DIR}/Radix.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Library.h
	${CMAKE_CURRENT_SOURCE_DIR}/Library.cpp
)

set(CMAKE_CURRENT_SOURCE_DIR ${NVTT_SOURCE_DIR}/src/nvmath)
set(MATH_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/nvmath.h
	${CMAKE_CURRENT_SOURCE_DIR}/Vector.h
	${CMAKE_CURRENT_SOURCE_DIR}/Matrix.h
	${CMAKE_CURRENT_SOURCE_DIR}/Quaternion.h
	${CMAKE_CURRENT_SOURCE_DIR}/Box.h
	${CMAKE_CURRENT_SOURCE_DIR}/Color.h
	${CMAKE_CURRENT_SOURCE_DIR}/Montecarlo.h
	${CMAKE_CURRENT_SOURCE_DIR}/Montecarlo.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Random.h
	${CMAKE_CURRENT_SOURCE_DIR}/Random.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SphericalHarmonic.h
	${CMAKE_CURRENT_SOURCE_DIR}/SphericalHarmonic.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Basis.h
	${CMAKE_CURRENT_SOURCE_DIR}/Basis.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Triangle.h
	${CMAKE_CURRENT_SOURCE_DIR}/Triangle.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/TriBox.cpp
)

set(CMAKE_CURRENT_SOURCE_DIR ${NVTT_SOURCE_DIR}/src/nvimage)
set(IMAGE_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/nvimage.h
	${CMAKE_CURRENT_SOURCE_DIR}/FloatImage.h
	${CMAKE_CURRENT_SOURCE_DIR}/FloatImage.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Filter.h
	${CMAKE_CURRENT_SOURCE_DIR}/Filter.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Image.h
	${CMAKE_CURRENT_SOURCE_DIR}/Image.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ImageIO.h
	${CMAKE_CURRENT_SOURCE_DIR}/ImageIO.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/ColorBlock.h
	${CMAKE_CURRENT_SOURCE_DIR}/ColorBlock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/BlockDXT.h
	${CMAKE_CURRENT_SOURCE_DIR}/BlockDXT.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/HoleFilling.h
	${CMAKE_CURRENT_SOURCE_DIR}/HoleFilling.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/DirectDrawSurface.h
	${CMAKE_CURRENT_SOURCE_DIR}/DirectDrawSurface.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Quantize.h
	${CMAKE_CURRENT_SOURCE_DIR}/Quantize.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/NormalMap.h
	${CMAKE_CURRENT_SOURCE_DIR}/NormalMap.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/NormalMipmap.h
	${CMAKE_CURRENT_SOURCE_DIR}/NormalMipmap.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/PsdFile.h
	${CMAKE_CURRENT_SOURCE_DIR}/TgaFile.h
)

set(CMAKE_CURRENT_SOURCE_DIR ${NVTT_SOURCE_DIR}/src/nvtt/squish)
set(SQUISH_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/fastclusterfit.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/fastclusterfit.h
	${CMAKE_CURRENT_SOURCE_DIR}/weightedclusterfit.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/weightedclusterfit.h
	${CMAKE_CURRENT_SOURCE_DIR}/colourblock.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/colourblock.h
	${CMAKE_CURRENT_SOURCE_DIR}/colourfit.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/colourfit.h
	${CMAKE_CURRENT_SOURCE_DIR}/colourset.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/colourset.h
	${CMAKE_CURRENT_SOURCE_DIR}/config.h
	${CMAKE_CURRENT_SOURCE_DIR}/maths.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/maths.h
	${CMAKE_CURRENT_SOURCE_DIR}/simd.h
	${CMAKE_CURRENT_SOURCE_DIR}/simd_sse.h
	${CMAKE_CURRENT_SOURCE_DIR}/simd_ve.h
)

set(CMAKE_CURRENT_SOURCE_DIR ${NVTT_SOURCE_DIR}/src/nvtt)
set(NVTT_SRCS
	${CMAKE_CURRENT_SOURCE_DIR}/nvtt.h
	${CMAKE_CURRENT_SOURCE_DIR}/nvtt.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/Compressor.h
	${CMAKE_CURRENT_SOURCE_DIR}/Compressor.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/nvtt_wrapper.h
	${CMAKE_CURRENT_SOURCE_DIR}/nvtt_wrapper.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CompressDXT.h
	${CMAKE_CURRENT_SOURCE_DIR}/CompressDXT.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/CompressRGB.h
	${CMAKE_CURRENT_SOURCE_DIR}/CompressRGB.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/QuickCompressDXT.h
	${CMAKE_CURRENT_SOURCE_DIR}/QuickCompressDXT.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/OptimalCompressDXT.h
	${CMAKE_CURRENT_SOURCE_DIR}/OptimalCompressDXT.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/SingleColorLookup.h
	${CMAKE_CURRENT_SOURCE_DIR}/CompressionOptions.h
	${CMAKE_CURRENT_SOURCE_DIR}/CompressionOptions.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/InputOptions.h
	${CMAKE_CURRENT_SOURCE_DIR}/InputOptions.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/OutputOptions.h
	${CMAKE_CURRENT_SOURCE_DIR}/OutputOptions.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cuda/CudaUtils.h
	${CMAKE_CURRENT_SOURCE_DIR}/cuda/CudaUtils.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/cuda/CudaMath.h
	${CMAKE_CURRENT_SOURCE_DIR}/cuda/Bitmaps.h
	${CMAKE_CURRENT_SOURCE_DIR}/cuda/CudaCompressDXT.h
	${CMAKE_CURRENT_SOURCE_DIR}/cuda/CudaCompressDXT.cpp
)

add_library(nvtt STATIC ${POSHLIB_SRCS} ${CORE_SRCS} ${MATH_SRCS} ${IMAGE_SRCS} ${SQUISH_SRCS} ${NVTT_SRCS})
